--- a/Konakart/src/test/resources/locators/productloc.properties
+++ b/Konakart/src/test/resources/locators/productloc.properties
@@ -3,10 +3,14 @@
 loc_image_xpath_clk=//div[@class="rounded-corners"]
 
 
-loc_description_xpath_clk=//p[@style="clear:both"]
+loc_img1_xpath_clk=//img[@alt="https://www.konakart.com/konakart/images/content/Kindle Fire"]
+loc_img2_xpath_clk=//img[@alt="https://www.konakart.com/konakart/images/content/DeLonghi Coffee Maker"]
+
+
+loc_description_xpath_txt=//p[@style="clear:both"]
 loc_specification_xpath_clk=//div[text()="Specifications"]
 loc_spetxt_xpath_txt=(//p[@style='clear:both'])[2]
-loc_customerreview_xpath_clk=//div[text()="Customer Reviews (3)"]
+loc_customerreview_xpath_clk=//div[@id='product-reviews-tab']
 loc_custxt_xpath_txt=//div[@id="average-customer-reviews"]
 
 
