--- a/Konakart/src/test/resources/locators/searchloc.properties
+++ b/Konakart/src/test/resources/locators/searchloc.properties
@@ -1,5 +1,5 @@
 
-positive search locators
+positive and negative search locators
 
 loc_dropdown_xpath_slt=//select[@id="top-cat-list"]
 
@@ -7,7 +7,11 @@ loc_searchtext_xpath_txt=//input[@id='search-input']
 
 loc_search_xpath_btn=//a[@id="search-button"]
 
-loc_possearch_xpath_txt=//span[@class='number-of-items navigation-element']
+
+
+loc_homepage_xpath_clk=//a[@href='Welcome.action']
+
+loc_possearch_xpath_txt=(//span[@class='number-of-items navigation-element'])[1]
 
 loc_negsearch_xpath_txt=//div[@class='items-message']
 
